Add config files and connectors during install